# Boid

./: Cargo.toml  PROFILING.md  README.md  run_flamegraph.sh  run_instruments.sh
benches/: boid_benchmark.rs
src/: app.rs  boid.rs  camera.rs  culling.rs  debug.rs  input.rs  lib.rs  main.rs  params.rs  physics.rs  renderer.rs  spatial_grid.rs  ui.rs
