[package]
name = "boids"
version = "0.1.0"
edition = "2021"
authors = ["Boid Simulation Author"]
description = "A boid flocking simulation with interactive parameters optimized for Apple Silicon"

[dependencies]
nannou = "0.18.1"         # Creative coding framework for graphics
nannou_egui = "0.5.0"     # Integration of egui with nannou for UI
rand = "0.8.5"            # Random number generation

[profile.release]
opt-level = 3             # Maximum optimization
lto = true                # Link-time optimization
codegen-units = 1         # Maximize optimization potential
panic = "abort"           # Remove panic unwinding code
strip = true              # Strip symbols from binary

[profile.dev]
opt-level = 1             # Basic optimizations for development builds
